# gpoket2

./: .gitignore  ANALYSIS.md  CITATION.md  CONTRIBUTING.md  DATASET_CARD.md  Dockerfile  Dockerfile.brz  Dockerfile.gld  Dockerfile.slv  Dockerfile.train  README.md  bar.py  docker-compose-etl.yml  docker-compose.yml  entrypoint_runpod.sh  foo.py  gotta_catch_em_all.py  gotta_catch_em_all_local.py  gotta_catch_em_all_s3.py  i_choose_you.py  nohup.out  pyproject.toml  s3_gotta_catch_em_all.py  train.txt
.devcontainer/: devcontainer.json
app/: train.py
data/: pokemon.json
datasets/: data_loader.py
experiment/: experiment_1_word_evel_tokenizer.ipynb  experiment_1_word_evel_tokenizer.py  experiment_2_custom_loss.ipynb  experiment_3_trainer.ipynb  fetch_pokemon.py  foo.py
foo/: foo.py
model/: merges.txt  tokenizer.json  vocab.json
pokemons_txt/: gen3_firered_normal_100_fliped.txt  gen3_firered_normal_100_original.txt  gen3_firered_normal_101_original.txt  gen3_firered_normal_104_fliped.txt  gen3_firered_normal_104_original.txt  gen3_firered_normal_10_fliped.txt  gen3_firered_normal_10_original.txt  gen3_firered_normal_116_fliped.txt  gen3_firered_normal_116_original.txt  gen3_firered_normal_11_fliped.txt  gen3_firered_normal_11_original.txt  gen3_firered_normal_120_fliped.txt  gen3_firered_normal_120_original.txt  gen3_firered_normal_133_fliped.txt  gen3_firered_normal_133_original.txt  gen3_firered_normal_135_fliped.txt  gen3_firered_normal_135_original.txt  gen3_firered_normal_137_fliped.txt  gen3_firered_normal_137_original.txt  gen3_firered_normal_1_fliped.txt  (+718 more)
(+245 files in other folders)
