[project]
name = "Agente"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<3.12"
dependencies = [
    "boto3>=1.40.12",
    "datasets>=4.0.0",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "pytz>=2025.2",
    "tokenizer>=3.4.5",
    "torch>=2.6.0",
    "transformers[torch]>=4.54.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.6.0",
    "pytest>=8.4.1",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["COM812"]
fixable = ["COM812"]
